# canon-vault

./: .gitignore  CLAUDE.md  README.md
apps/api/: pyproject.toml
apps/api/app/: database.py  main.py
apps/api/app/models/: __init__.py  _base.py  changelog.py  chapter.py  character.py  episode.py  episode_links.py  faction.py  location.py  prompt_template.py  relationship.py  universe.py
apps/api/app/routers/: chapters.py  characters.py  episodes.py  factions.py  ingest.py  locations.py  prompt_templates.py  relationships.py  universes.py
apps/api/app/services/: changelog.py  ingest.py  script_reader.py
apps/api/tests/: conftest.py  test_changelog.py  test_chapter_governance.py  test_character_crud.py  test_enum_validation.py  test_episode_governance.py  test_episode_script.py  test_health.py  test_ingest.py  test_relationships.py  test_source_bootstrap.py
apps/web/: README.md  package-lock.json  package.json
apps/web/scripts/: generate-api.mjs
apps/web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/src/app/chapters/: page.tsx
apps/web/src/app/characters/: page.tsx
apps/web/src/app/episodes/: page.tsx
apps/web/src/app/factions/: page.tsx
apps/web/src/app/ingest/: page.tsx
apps/web/src/components/: app-shell.tsx  changelog-timeline.tsx  character-dossier.tsx  command-palette.tsx  empty-state.tsx  entity-card.tsx  entity-hero.tsx  json-section.tsx  loading-state.tsx  page-header.tsx  script-viewer.tsx  section-panel.tsx  status-badge.tsx
apps/web/src/lib/: dossier-schema.ts  navigation.ts  utils.ts
(+13 files in other folders)
